--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Configuración de Base de Datos
-DB_HOST=tu_host_aqui
-DB_PORT=tu_puerto_aqui
-DB_USER=tu_usuario_aqui
-DB_PASSWORD=tu_password_aqui
-DB_NAME=tu_base_de_datos_aqui
+DB_HOST=tramway.proxy.rlwy.net
+DB_PORT=35552
+DB_USER=root
+DB_PASSWORD=KdavjHoyqdUFDRgtjZcYkoPcHrTazCgI
+DB_NAME=railway
 
 # Configuración de Flask
 FLASK_ENV=development
@@ -12,3 +12,5 @@ SECRET_KEY=genera_una_clave_secreta_aleatoria
 
 # URL completa de la base de datos (se construye automáticamente)
 DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+
+#Esta es la cedena completa: mysql://root:KdavjHoyqdUFDRgtjZcYkoPcHrTazCgI@tramway.proxy.rlwy.net:35552/railway
