subiendo cambios en conexion

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,30 @@
 # Configuración de Base de Datos
-DB_HOST=tramway.proxy.rlwy.net
-DB_PORT=35552
+DB_HOST=localhost
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=KdavjHoyqdUFDRgtjZcYkoPcHrTazCgI
-DB_NAME=railway
+DB_PASSWORD=tu_password
+DB_NAME=sistema_academico
 
 # Configuración de Flask
-FLASK_ENV=development
-FLASK_DEBUG=True
-SECRET_KEY=genera_una_clave_secreta_aleatoria
+FLASK_ENV=production
+FLASK_DEBUG=False
+SECRET_KEY=genera_una_clave_secreta_aleatoria_segura
 
-# URL completa de la base de datos (se construye automáticamente)
+# URL completa de la base de datos
 DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
-#Esta es la cedena completa: mysql://root:KdavjHoyqdUFDRgtjZcYkoPcHrTazCgI@tramway.proxy.rlwy.net:35552/railway
+# SQLAlchemy Database URI (usar formato: mysql+pymysql://usuario:password@host:puerto/nombre_db)
+# Para desarrollo local:
+# DATABASE_URI=mysql+pymysql://root:@localhost/sistema_academico
+# Para Railway o producción:
+# DATABASE_URI=mysql+pymysql://root:password@host:puerto/sistema_academico
+DATABASE_URI=mysql+pymysql://root:@localhost/sistema_academico
+
+# Configuración de correo (opcional)
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USE_SSL=False
+MAIL_USERNAME=tu_email@gmail.com
+MAIL_PASSWORD=tu_password_de_aplicacion
+MAIL_DEFAULT_SENDER=tu_email@gmail.com
